2003-01-17  Reinhard Spisser   <reinhard@spisser.it>

	* www/forum/*: there were still a lot of unlocalized strings.  
	Now there should be no more hardcoded strings. The forum
	localization should be now complete.

	* www/include/languages/Base.tab: Added labels for forums
	and general error messages 

	* www/include/languages/Italian.tab: Added translations for italian

	* common/include/Error.class:	added new localized Error functions
	setPermissionDeniedError(),setInvalidEmailError(),setOnUpdateError(),
	setGroupIdError(). These functions can be used by all classes that
	subclass Error.class, and instead of setting
	$this->setError("Permission Denied"), they should call
	$this->setPermissionDeniedError()

	* common/forum/*:	localized Forum classes
	All hardcoded strings are replaced with calls to getText()

	* common/docman/*:	added calls to new localized Error functions

2003-01-17 Tom Copeland <tom@infoether.com>

	* www/scm/index.php, etc/local.inc: Added new sys_cvs_single_host system
	variable that gives all projects the same CVS hostname.  Set it up
	as being on - i.e., everyone gets the same hostname - by default.

2003-01-16  Roland Mas  <lolando@debian.org>

	* www/include/languages/*.tab: Recoded everything to UTF-8.

2003-01-15  Reinhard Spisser   <reinhard@spisser.it>

	* www/include/languages/Base.tab: added forum labels

        * www/forum/*: localized forum
 
        * www/include/languages/Italian.tab: translations of new forum strings

2003-01-15  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/languages/Spanish.tab: translations for Reinhard's
	new strings.

2003-01-15

	***** PRE9

2003-01-15  Roland Mas  <lolando@debian.org>

	* common/include/Plugin.class: PHPdoc.

	* common/include/PluginManager.class: ditto.  Also, moved code to
	pre.php.

	* www/include/pre.php: Added code from PluginManager.class.

	* db/20021214.sql: Added plugin subsystem tables and sequences.

2003-01-14  Roland Mas  <lolando@debian.org>
